--- a/estudosreact/package.json
+++ b/estudosreact/package.json
@@ -22,6 +22,12 @@
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "prettier": "^2.8.4"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
+  
 }
